[gd_scene load_steps=13 format=3 uid="uid://oud6mryi7mkg"]

[ext_resource type="Script" uid="uid://ca3fq6lucyjdn" path="res://Games/fnaf/ui/office_tv/office_tv.gd" id="1_i7d72"]
[ext_resource type="Script" uid="uid://c2rlqeq2bwvd0" path="res://addons/simusdev/localization/SD_Label.gd" id="2_0hf62"]
[ext_resource type="Texture2D" uid="uid://bbjlxcgkm14hj" path="res://Games/fnaf/textures/energy/212.png" id="3_0hf62"]
[ext_resource type="Texture2D" uid="uid://dnqi20tbkooxa" path="res://Games/fnaf/textures/energy/213.png" id="3_jb0cu"]
[ext_resource type="Texture2D" uid="uid://brrxn03f4w6k8" path="res://Games/fnaf/textures/energy/214.png" id="4_cxmsp"]
[ext_resource type="Texture2D" uid="uid://88tn571u0abv" path="res://Games/fnaf/textures/energy/455.png" id="5_w260x"]
[ext_resource type="Texture2D" uid="uid://cndxrxgay1apo" path="res://Games/fnaf/textures/energy/456.png" id="6_en5br"]
[ext_resource type="Shader" uid="uid://bjbikqsd8vj2x" path="res://Games/fnaf/ui/camera/camera.gdshader" id="8_cxmsp"]

[sub_resource type="LabelSettings" id="LabelSettings_w260x"]
font_size = 256

[sub_resource type="LabelSettings" id="LabelSettings_en5br"]
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_0jecq"]
font_size = 100

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3o4bd"]
shader = ExtResource("8_cxmsp")
shader_parameter/overlay = true
shader_parameter/resolution = Vector2(640, 360)
shader_parameter/brightness = 1.4
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/roll = false
shader_parameter/roll_speed = 8.44
shader_parameter/roll_size = 0.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.05
shader_parameter/aberration = 0.041
shader_parameter/noise_opacity = 1.0
shader_parameter/noise_speed = 1.0
shader_parameter/static_noise_intensity = 0.176
shader_parameter/pixelate = true
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.1
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 1.0

[node name="OfficeTv" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_i7d72")
usage_textures = Array[Texture]([ExtResource("3_0hf62"), ExtResource("3_jb0cu"), ExtResource("4_cxmsp"), ExtResource("6_en5br"), ExtResource("5_w260x")])

[node name="label_time" type="Label" parent="."]
custom_minimum_size = Vector2(767, 257)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -323.0
offset_right = 640.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 2
text = "0:00"
label_settings = SubResource("LabelSettings_w260x")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
script = ExtResource("2_0hf62")
font_size = 256
metadata/_custom_type_script = "uid://c2rlqeq2bwvd0"

[node name="label_powerleft" type="Label" parent="."]
custom_minimum_size = Vector2(767, 257)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -723.5
offset_top = -18.0
offset_right = 723.5
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
text = "POWER LEFT: 100%"
label_settings = SubResource("LabelSettings_en5br")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
script = ExtResource("2_0hf62")
font_size = 100
metadata/_custom_type_script = "uid://c2rlqeq2bwvd0"

[node name="label_usage" type="Label" parent="."]
custom_minimum_size = Vector2(767, 257)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -718.0
offset_top = 109.0
offset_right = 49.0
offset_bottom = 366.0
grow_horizontal = 2
grow_vertical = 2
text = "USAGE:"
label_settings = SubResource("LabelSettings_0jecq")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
script = ExtResource("2_0hf62")
font_size = 100
metadata/_custom_type_script = "uid://c2rlqeq2bwvd0"

[node name="usage_texture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 502.0
offset_top = 548.0
offset_right = 902.0
offset_bottom = 671.0
texture = ExtResource("3_0hf62")
expand_mode = 1
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_3o4bd")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
